# opium

./: INSTALL  Makefile  Makefile.in  README  _emacs_mode  clatom  configure  configure.ac  install.command  makevars.in  makevars_static
doc/: CHANGELOG  INSTALL  README  README_fortran  README_solidstatecodes
docs/: CHANGELOG  README  README_MacOSX  README_fortran
src/: Makefile  Makefile.in  dictionary  log
src/FlexiLib/: Makefile  Makefile.in  flexi.c  flexi.h
src/atom/: COMS  LIST  Makefile  Makefile.in  akeato.F  aprdev.F  atm.F  atm.f  average.F  c.f  cofcon.F  corpz.F  corvwn.F  cubint.F  cubint.f  cwig3j.F  denkcomp.F  dentfa.F  dfsolve.F  dftsolve.F  difrel.F  difrel.f  do_ae.c  do_fc.c  do_nl.c  do_tc.c  dsolv2.F  dsolv2.f  dsordf.F  etotal.F  etotal.f  excorr.F  excorr.f  fdrirk.F  getpcc.F  getpcc.f  ghostnl.F  ghostnl.f  hfcoef.F  hfcoef_rel.F  (+55 more)
src/include/: cdim.h  common_blocks.h  compilehost.h  do_ae.h  do_aeplt.h  do_casino.h  do_champ.h  do_cpmd.h  do_fc.h  do_fhi.h  do_ipsplt.h  do_ke.h  do_keplot.h  do_logplot.h  do_logplt.h  do_ncpp.h  do_nl.h  do_nlplt.h  do_pccplot.h  do_pccplt.h  do_plot.h  do_plt.h  do_ps.h  do_psplt.h  do_pwf.h  do_qeupf.h  do_qplot.h  do_qso.h  do_recpot.h  do_siesta.h  do_spinor.h  do_spsplt.h  do_tc.h  do_teter.h  do_upf.h  do_vplot.h  do_wplot.h  energy.h  fortdim.h  fortparam.h  (+2 more)
src/lapack/: Makefile  Makefile.in
src/main/: Makefile  Makefile.in  nlm.c  opium.c  parameter.c
src/output/: COMS  Makefile  Makefile.in  PARAMKB  cwritepwf.c  do_casino.c  do_champ.c  do_cpmd.c  do_fhi.c  do_ncpp.c  do_pwf.c  do_qeupf.c  do_qeupf2.c  do_qso.c  do_recpot.c  do_siesta.c  do_spinor.c  do_teter.c  do_upf.c  klby.F  klby.f  nwrite.c  radina.F  radina.f  writepwf.F  writepwf.f  writerecpot.F  writerecpot.f
src/plot/: Makefile  Makefile.in  btrans.F  btrans.f  do_aeplt.c  do_ipsplt.c  do_keplot.c  do_logplot.c  do_logplt.c  do_nlplt.c  do_pccplot.c  do_pccplt.c  do_plot.c  do_psplt.c  do_qplot.c  do_spsplt.c  do_vplot.c  do_wplot.c
src/pseudo/: LIST  Makefile  Makefile.in  PARAMOPT  ai.F  ai.f  besfn.F  besfn.f  biq.F  biq.f  conmax.F  conmax.f  conmaxdriver.F  conmaxdriver.f  cq.F  cq.f  descreen.F  descreen.f  dij.F  dij.f  do_ke.c  do_ps.c  ei.F  ei.f  finteg.F  finteg.f  fitwv.F  fitwv.f  fnset2.F  fnset2.f  gaussq.F  gaussq.f  ghost.F  ghost.f  ginteg.F  ginteg.f  guess.F  guess.f  hfinvdesc.F  hfsmooth.F  (+23 more)
src/uniPPlib/: Makefile  Makefile.in  uniPP_alpha.c  uniPP_ffloc.c  uniPP_ffnlcc.c  uniPP_free.c  uniPP_kbden.c  uniPP_kbfnl.c  uniPP_read.c  uniPP_write.c  uniPP_writefhi.c  uniPPlib.h  xmcomplex.h  xmintegral.h
testdir/: LIST  README  clean  comp  comp2  run  run1
testdir/params/: au.param  b.param  b.param~  bi.param  f.param  fe.param  h.param  hf.param  la.param  la.param~  li.param  n.param  ne.param  o.param  p.param~  pb.param  pt.param  rh.param  s.param  y.param
testdir/results/: al.cpi  al.cpmd  al.fhi  al.ncpp  al.param  al.psf  al.pwf  al.recpot  al.rpt  au.cpi  au.cpmd  au.fhi  au.ncpp  au.psf  au.pwf  au.recpot  au.rpt  b.cpi  b.cpmd  b.fhi  b.ncpp  b.psf  b.pwf  b.recpot  b.rpt  bi.rpt  bi.upf  c.cpi  c.cpmd  c.fhi  c.ncpp  c.param  c.psf  c.pwf  c.recpot  c.rpt  ca.cpi  ca.cpmd  ca.fhi  ca.psf  (+185 more)
tests/: LIST  clean  run
tests/C/GGA/references/: c.param  c.rpt
tests/C/HF/: c.param
tests/C/HF/references/: c.rpt
tests/C/HY/references/: c.param  c.rpt
tests/C/LDA/references/: c.param  c.rpt
tests/Ga/GGA/: ga.param
tests/Ga/GGA/references/: ga.rpt
tests/Ga/HF/references/: ga.param  ga.rpt
tests/Ga/HY/: ga.param
tests/Ga/HY/references/: ga.rpt
tests/Ga/LDA/: ga.param
tests/Ga/LDA/references/: ga.rpt
tests/H/GGA/: h.param
tests/H/GGA/references/: h.rpt
tests/H/HF/: h.param
tests/H/HF/references/: h.rpt
tests/H/HY/references/: h.param  h.rpt
tests/H/LDA/references/: h.param  h.rpt
tests/O/GGA/: o.param
tests/O/GGA/references/: o.rpt
tests/O/HF/: o.param
tests/O/HF/references/: o.rpt
tests/O/HY/: o.param
tests/O/HY/references/: o.param  o.rpt  o.upf
tests/O/LDA/: o.param
tests/O/LDA/references/: o.rpt
tests/Pt/GGA/references/: Pt.param  Pt.rpt
tests/Pt/HF/: pt.param
tests/Pt/HY/references/: pt.param  pt.rpt
tests/Pt/LDA/: pt.param
tests/Pt/LDA/references/: pt.rpt
tests/Y/: A0.ae_plt  A0.eig_ae  A0.eng  A0.kedat  A0.loc  A0.nl_plt  A0.param  A0.pcc_plt  A0.pot.ps.l=0+  A0.pot.ps.l=1+  A0.pot.ps.l=1-  A0.pot.ps.l=2+  A0.pot.ps.l=2-  A0.pot_ae  A0.psi.ps.l=0+  A0.psi.ps.l=1+  A0.psi.ps.l=1-  A0.psi.ps.l=2+  A0.psi.ps.l=2-  A0.psi_ae  A0.psi_ae_ascii  A0.psi_last  A0.psi_nl  A0.rho_nl  A0.rpt  A0.vi_plt  A0.vs_plt
tests/params/: al.param  c.param  ca.param  cu.param  fe.param  hf.param  o.param  s.param  ti.param
tests/results/linux_fort77.gcc/: al.rpt  au.rpt  b.rpt  c.rpt  ca.rpt  cu.rpt  fe.rpt  h.rpt  hf.rpt  li.rpt  ne.rpt  o.rpt  pt.rpt  rh.rpt  s.rpt  ti.rpt  y.rpt
tests/results/linux_ifc.icc/: al.rpt  au.rpt  b.rpt  c.rpt  ca.rpt  cu.rpt  fe.rpt  h.rpt  hf.rpt  li.rpt  ne.rpt  o.rpt  pt.rpt  rh.rpt  s.rpt  ti.rpt  y.rpt
tests/results/linux_ifort.icc/: al.rpt  au.rpt  b.rpt  c.rpt  ca.rpt  cu.rpt  fe.rpt  h.rpt  hf.rpt  li.rpt  ne.rpt  o.rpt  pt.rpt  rh.rpt  s.rpt  ti.rpt  y.rpt
tests/results/linux_pgf77.gcc/: al.rpt  au.rpt  b.rpt  c.rpt  ca.rpt  cu.rpt  fe.rpt  h.rpt  hf.rpt  li.rpt  ne.rpt  o.rpt  pt.rpt  rh.rpt  s.rpt  ti.rpt  y.rpt
tests/results/macOSX_fort77.gcc/: al.rpt  au.rpt  b.rpt  c.rpt  ca.rpt  cu.rpt  fe.rpt  h.rpt  hf.rpt  li.rpt  ne.rpt  o.rpt  pt.rpt  rh.rpt  s.rpt  ti.rpt  y.rpt
